--- a/LAB-2 [HTML-FORM]/name.html
+++ b/LAB-2 [HTML-FORM]/name.html
@@ -12,7 +12,9 @@
 			<table >
 				<tr>
 					<td>Username: <br>
-					<input type="text" name="username" value=""/></td>
+					<input type="text" name="username" value=""><br>
+
+					<input type="button" name="click" value="Submit"><br></td>
 				</tr>
 		</fieldset>
 		
