--- a/LAB-2 [HTML-FORM]/gender.html
+++ b/LAB-2 [HTML-FORM]/gender.html
@@ -19,6 +19,9 @@
 						<input type="button" name="click" value="Submit"><br>
 					</td>
 				</tr>
+			</table>
+			<input type="button" name="click" value="Submit">
+
 
 		</fieldset>
 		
