--- a/LAB-2 [HTML-FORM]/dob.html
+++ b/LAB-2 [HTML-FORM]/dob.html
@@ -12,14 +12,21 @@
 			
 			<table>
 				<tr>
-					 <td>dd 		    			mm								yyyy<br>
-					 	<input size="3" type="text" id="email" name="email" placeholder="dd">
-                        /<input size="3" type="text" name="" placeholder="mm">
-                        /<input size="4" type="text" name="" placeholder="yyyy">
+					<td>Degree: </td>
+                    <td><input type="checkbox" id="1" name="1">
+                        <label for="1">SSC</label>
 
-                        (dd/mm/yyyy)
-                        
+                        <input type="checkbox" id="2" name="2">
+                        <label for="2">HSC</label>
+
+                        <input type="checkbox" id="3" name="3">
+                        <label for="2">BSc.</label>
+
                     </td>
+
+
+                </tr>
+ 
                 </tr>
  
 				</table>
