--- a/LAB-2 [HTML-FORM]/dob.html
+++ b/LAB-2 [HTML-FORM]/dob.html
@@ -8,11 +8,11 @@
 
 	<form action="" method="">
 		<fieldset>
-			<legend>Date Of Borth</legend>
+			<legend>Degree</legend>
 			
 			<table>
 				<tr>
-					<td>Degree: </td>
+					
                     <td><input type="checkbox" id="1" name="1">
                         <label for="1">SSC</label>
 
