--- a/LAB-4 [PHP] [Form] [Validation] [Full]/Task 3/ProPic.html
+++ b/LAB-4 [PHP] [Form] [Validation] [Full]/Task 3/ProPic.html
@@ -6,7 +6,7 @@
 <body>
 	<form method="POST" action="ProPic.php" enctype="multipart/form-data">
 	<fieldset>
-			<legend><b>Profile Picture</b></legend>
+			<legend><b>PROFILE PICTURE</b></legend>
                 <img src ="ProPic.png" height="100px" weight="50px"> </img><br>
 				<input type ="file"name="ufile"> </input><br><hr>
              
